# works_for_me

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECRETS_GUIDE.md  bentofile.yaml  cloudbuild.yaml  docker-compose.yml  docker_how_to.txt  profile.prof  pyproject.toml  requirements.bento.txt  requirements.txt  service.py  tasks.py  test.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/agents/: dtu_mlops_agent.md
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml
data/: processed.dvc
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: testing_christian.ipynb
outputs/2026-01-13/15-39-36/.hydra/: hydra.yaml
outputs/2026-01-13/15-39-55/.hydra/: hydra.yaml
outputs/2026-01-13/15-40-50/.hydra/: hydra.yaml
outputs/2026-01-13/16-03-05/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-13/16-04-00/.hydra/: hydra.yaml
reports/: README.md
reports/figures/: Pieline.drawio  README.md
src/audio_emotion/: cli.py  data.py  dataset.py  download.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_cli.py  test_data.py  test_download.py  test_evaluate.py  test_model.py  test_train.py  test_visualize.py
works_for_me/: LICENSE
works_for_me/dockerfiles/: train.dockerfile
works_for_me/src/audio_emotion/: train.py
works_for_me/tests/: test_data.py
