[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "audio_emotion"
version = "0.0.1"
description = "Audio emotion recognition using deep learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  "numpy<2",
  "hydra-core>=1.3.2",
  "loguru>=0.7.3",
  "typer==0.15.1",
  "dvc-gs>=3.0.2",
]

[project.optional-dependencies]
api = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
]
dev = [
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]

[dependency-groups]
train = [
  "kaggle>=1.8.3",
  "kagglehub>=0.4.0",
  "librosa>=0.11.0",
  "soundfile>=0.13.1",
  "matplotlib>=3.10.8",
]
cpu = [
  "torch==2.0.1",
  "torchaudio==2.0.2",
]
cu117 = [
  "torch==2.0.1+cu117",
  "torchaudio==2.0.2+cu117",
]

[tool.uv]
conflicts = [
  [
    { group = "cpu" },
    { group = "cu117" },
  ],
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu117", group = "cu117" }]
torchaudio = [{ index = "pytorch-cu117", group = "cu117" }]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[project.scripts]
audio-emotion = "audio_emotion.cli:app"
audio-emotion-train = "audio_emotion.train:app"
